Integrate-api (#9)
* feat: integrate React Query for API health checks

* refactor: update API documentation for address handling and health check

* feat: enhance Orval configuration and update health check hook

* feat: implement useRegister hook and integrate it into Gateway component for address registration

* feat: add CheckAndStoreNonce method to EmailStore

* feat: enhance signature authentication

- enhance signature authentication middleware to include nonce validation and body hash verification

* refactor: update signature authentication middleware

* feat: update version and add Zustand dependency

* refactor: remove DemoHealth component and its usage from Landing page

* chore: update dependencies in package.json and bun.lock

* fix: update build script in package.json to include CSP placeholder injection

* feat: add static directory configuration to server initialization

* feat: add static file serving capability to router

* refactor: reorganize imports and remove unused fn

* feat: implement identity store using Zustand for managing user identity state

* feat: inject CSP nonce placeholder into index.html script tags

* feat: add custom fetch implementation for authenticated API requests

* refactor: replace sessionStorage identity retrieval with Zustand store integration in InboxHeader

* feat: implement signRequest function for generating signed API request headers

* feat: enhance security with Content Security Policy and nonce generation in middleware

* refactor: simplify useRegister hook and enhance error handling in authenticated client

* chore: lock security packages

* refactor: improve customFetch implementation

enhance error handling; update response structure in authenticatedClient
